objects/HP_Quote_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Business_Group__c</fullName>
        <formula>TEXT(Product_Name__r.Business_Group__c)</formula>
        <label>Business Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <formula>IF(Discount_Amount__c == 0,0,Discount_Amount__c / ( Total_Sales_Price__c + Discount_Amount__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GBU__c</fullName>
        <formula>TEXT( Product_Name__r.GBU__c)</formula>
        <label>GBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HP_Quote_Name__c</fullName>
        <label>HP Quote Name</label>
        <referenceTo>HP_Quote__c</referenceTo>
        <relationshipLabel>HP Quote Line Items</relationshipLabel>
        <relationshipName>Quote_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <formula>Product_Name__r.Product_Line__c</formula>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Return_to_Support__c</fullName>
        <label>Return to Support</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Product_Line__c</fullName>
        <formula>Product_Name__r.Sub_Product_Line__c</formula>
        <label>Sub Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Sales_Price__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Total Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>HP Quote Line Item</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HP Quote Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>